--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   html: ^0.15.0
+  flutter_html: ^3.0.0-alpha.6
+
 
 dev_dependencies:
   flutter_test:
