--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   dio: ^4.0.6
   html: ^0.15.0
   flutter_html: ^3.0.0-alpha.6
+  webview_flutter: ^4.0.1
+  shared_preferences: ^2.0.15
+
 
 
 dev_dependencies:
