--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.6
   webview_flutter: ^4.0.1
   shared_preferences: ^2.0.15
+  fluttertoast: ^8.1.2
 
 
 
